# Super_Z80_v2

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
artifacts/reports/: DOCS-01_dependency_policy_report.md  M10_dma_report.md  M11_vdp_report.md  M12_tile_renderer_report.md  M13_sprite_engine_report.md  M14_palette_report.md  M15_scrolling_report.md  M16_foreground_plane_report.md  M17_sprite_priority_report.md  M18_sprite_scanline_limits_report.md  M19_sprite_attributes_report.md  M1_emulator_skeleton_report.md  M20_sprite_pattern_banks_report.md  M21_tile_pattern_banks_report.md  M22_sprite_collision_report.md  M23_vdp_baseline_freeze_report.md  M24_controller_input_report.md  M25_audio_spec_report.md  M26a_audio_registers_report.md  M26b_audio_generators_report.md  M26c_audio_mixer_report.md  M26d_sdl_audio_output_report.md  M26e_audio_validation_report.md  M27_platform_validation_report.md  M28_developer_docs_report.md  M2_crc_utilities_report.md  M3_memory_subsystem_report.md  M44_frontend_architecture_foundation_report.md  M45_imgui_integration_report.md  M46_emulator_control_panel_report.md  M47_rom_loader_interface_report.md  M48_cpu_debug_panel_report.md  M49_memory_viewer_report.md  M4_bus_layer_report.md  M50_vram_viewer_report.md  M51_sprite_debug_panel_report.md  M52_dma_debug_panel_report.md  M53_audio_debug_panel_report.md  M54_input_visualization_panel_report.md  M55_frame_timing_scheduler_panel_report.md  (+53 more)
docs/: architecture.md  audio_spec.md  decisions.md  developer_guide.md  getting_started.md  hardware_reference.md  plan.md  platform_timing.md  programming_audio.md  programming_graphics.md  programming_input.md  showcase_programmers_guide.md  showcase_state_snapshot.md  spec.md  state_snapshot.md  vdp_baseline_v1.md  ym2151_reference.md
docs/archive/plans/: plan_emulator_platform_completed.md  plan_showcase_rom_completed.md
emulator/: CMakeLists.txt
emulator/audio/mixer/: audio_mixer.cpp  audio_mixer.h
emulator/audio/ym2151/: ym2151.cpp  ym2151.h
emulator/frontend/: frontend.cpp  frontend.h
emulator/frontend/debug_panels/: debug_panel_host.cpp  debug_panel_host.h
emulator/include/: apu.h  apu_registers.h  bus.h  cpu.h  crc32.h  dma.h  emulator_core.h  io.h  irq_controller.h  memory.h  scheduler.h  vblank.h  vdp.h
emulator/src/: apu.cpp  bus.cpp  cpu.cpp  crc32.cpp  dma.cpp  emulator_core.cpp  io.cpp  irq_controller.cpp  main.cpp  memory.cpp  scheduler.cpp  sdl_audio_output.cpp  sdl_audio_output.h  vblank.cpp  vdp.cpp
emulator/tests/: test_audio_sequence_helpers.h
emulator/tests/integration/: test_cpu_dma_irq_integration.cpp  test_external_rom_execution.cpp  test_input_audio_integration.cpp  test_platform_determinism.cpp  test_vdp_vblank_irq.cpp
emulator/tests/unit/: test_apu.cpp  test_apu_generators.cpp  test_apu_mixer.cpp  test_audio_determinism.cpp  test_audio_mixer.cpp  test_audio_mixing_behavior.cpp  test_audio_noise_behavior.cpp  test_audio_output_integration.cpp  test_audio_register_behavior.cpp  test_bus.cpp  test_cpu.cpp  test_crc32.cpp  test_dma.cpp  test_emulator_core.cpp  test_foreground_plane.cpp  test_input.cpp  test_io.cpp  test_irq.cpp  test_memory.cpp  test_palette.cpp  test_scheduler.cpp  test_scrolling.cpp  test_sdl_audio_output.cpp  test_sprite_collision.cpp  test_sprite_flipping.cpp  test_sprite_pattern_banks.cpp  test_sprite_priority.cpp  test_sprite_renderer.cpp  test_sprite_scanline_limits.cpp  test_tile_pattern_banks.cpp  test_tile_renderer.cpp  test_vblank.cpp  test_vdp.cpp  test_ym2151.cpp
rom/showcase/: Makefile
rom/showcase/assets/: demo_sprite.asm  font_8x8.asm  splash_tilemap.asm  splash_tiles.asm
rom/showcase/inc/: constants.inc  memory_map.inc  vdp_helpers.inc
rom/showcase/src/: init.asm  main.asm  main_loop.asm  text.asm  vdp_init.asm
rom/starter/src/: main.asm
sdk/assets/: font_8x8.asm  splash_tilemap.asm  splash_tiles.asm
sdk/inc/: input.inc  super_z80.inc  vdp.inc
sdk/runtime/inc/: runtime.inc
sdk/runtime/src/: reset.asm  runtime_init.asm
tasks/active/: M44_frontend_architecture_foundation_report.md  M47_rom_loader_interface.md  M49_memory_viewer.md  M56_emulator_snapshot_tools.md  M59_display_scaling_window_sizing.md  M60_rom_browser_integration.md  m29d_ym2151_sample_generation.md  m29e_audio_mixer.md  m29g_sdl_audio_output_integration.md  m29j_sdk_integration_validation.md  m30_showcase_rom_scaffold.md  m32_system_splash_screen.md  m33_scrolling_tilemap_demo.md  m37_sprite_animation.md  m39_controller_input_demo.md  m39_psg_sound_effects.md  m40_ym2151_music_playback.md  m41_audio_mixing_demo.md  m42_integrated_showcase_scene.md  m52_dma_debug_panel.md  m53_audio_debug_panel.md  m63_interactive_sdl_audio_runtime_parity_fix.md  plan_reconciliation_audio_final.md  showcase_milestone_reconciliation_controller_input.md
tasks/completed/: M10_dma.md  M11_video_pipeline.md  M12_tile_renderer.md  M13_sprite_engine.md  M14_palette_system.md  M15_scrolling.md  M16_foreground_plane.md  M17_sprite_priority.md  M18_sprite_scanline_limits.md  M19_sprite_attributes.md  M20_sprite_pattern_banks.md  M21_tile_pattern_banks.md  M22_sprite_collision.md  M23_vdp_baseline_freeze.md  M24_controller_input.md  M25_audio_spec.md  M26a_audio_registers.md  M26b_audio_generators.md  M26c_audio_mixer.md  M26d_sdl_audio_output.md  M26e_audio_validation.md  M27_platform_validation.md  M28_developer_docs.md  M3_memory_subsystem.md  M45_imgui_integration.md  M46_emulator_control_panel.md  M48_cpu_debug_panel.md  M4_bus_layer.md  M50_vram_viewer.md  M55_frame_timing_scheduler_panel.md  M57_integrated_debug_overlay.md  M58_frontend_stabilization.md  M60_display_pipeline_bring_up.md  M6_io_register_skeleton.md  M7_scheduler.md  M8_irq_controller.md  M9_vblank.md  audio_arch_revision.md  audio_plan_alignment.md  m29a_ym2151_register_interface.md  (+15 more)
workflow/: bootstrap_packet.md  report_template.md  task_template.md
